--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -4,8 +4,8 @@ jobs:
   labelWhenApproved:
     runs-on: ubuntu-latest
     steps:
-      name: Apply the approved label
-      uses:  pullreminders/label-when-approved-action
+    - name: Apply the approved label
+    - uses:  pullreminders/label-when-approved-action
       env:
         APPROVALS: "1"
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
